--- a/src/componentes/contador.css
+++ b/src/componentes/contador.css
@@ -1,13 +1,15 @@
+
+
 .contador{
-    width: 300px;
-    height: 300px;
+    width: 100%;
+    height: 60px;
     margin: auto;
-    font-size: 160px;
-    padding: 25px;
-   background-color: aquamarine;
+    font-size: 50px;
+    
+   
     display:flex;
     align-items: center;
     justify-content: center;
-    border: 10px solid beige;
+    border: 2px solid beige;
   
   }
